@@ -21,7 +21,9 @@ namespace SDA
         List<byte> byteMap;
         Texture2D wall;
         FileInfo[] files;
+        List<Rectangle> wallSpaces;
 
+        public List<Rectangle> WallSpaces { get { return wallSpaces; } }
         /// <summary>
         /// Constructor for Map class, accepts the ContentManager from Game1, so that the class is able to draw the wallsx
         /// </summary>
@@ -37,6 +39,7 @@ namespace SDA
             roomNumber = 0;
             wall = content.Load<Texture2D>("WorldObjects/Wall");
             files = dirInfo.GetFiles();
+            wallSpaces = new List<Rectangle>();
         }
 
         /// <summary>
@@ -71,6 +74,7 @@ namespace SDA
         {
             int row = 0;
             int column = 0;
+            int i = 0;
             foreach (int tile in levelMap[roomNumber])//Current Roomnumber is just set to 0 so it only loads one room. No need to load
                                                       //any other room at the current moment since I do not have any sort of 
                                                       //implementation for transitioning between rooms.
@@ -78,20 +82,23 @@ namespace SDA
 
                 if (tile == 1) //1 is a wall
                 {
+                    wallSpaces.Add(new Rectangle(column*64, row*64,tileWidth,tileHeight));
+
                     //I'll most likely end up reworking how I handle loading of maps so that I save the rectangles
                     //that are used in the spriteBatch.Draw so that I can use it later for collision detection to check if
                     //a players move would put the model into the wall or inside an enemy, and then refuse that movement.
 
-                    spriteBatch.Draw(wall, new Rectangle(column * 64,  
-                        row * 64, tileWidth, tileHeight), Color.White);
+                    spriteBatch.Draw(wall, wallSpaces[i], Color.White);
                     //Map is 77 tiles, so after it draws row 1 column 0 through 10, it automatically moves on to row 2 column 0
                     if (column == 10)
                     {
                         column = 0;
                         row++;
+                        i++;
                     }
                     else
                     {
+                        i++;
                         column++;
                     }
                 }
