@@ -15,3 +15,5 @@ Reorganized loading of textures with the introduction of a Sprite class, loaded 
 Player and the enemy texture were resized to fit with the size put for the map tiles sizes. Character correctly moves within
 the level area. Collision is not in the game yet, and there is no combat or enemy AI yet. A first playable is possible at this point, 
 with the rendering of the character/world and movement. Will continue to be improved for a better first playable however.
+
+4/7/16 12:22 PM: Collision! We have a basic version of collision in the game, the player doesn't collide with the walls of the game world anymore.
